src/codata_.f90

module codata
!! Codata constants - autogenerated.
use iso_c_binding
implicit none
 
integer(c_int), protected, bind(C,name="YEAR") :: YEAR = 2018

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_ELECTRON_MASS_RATIO") :: &
ALPHA_PARTICLE_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO") :: &
U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_MASS") :: &
ALPHA_PARTICLE_MASS= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_MASS") :: &
U_ALPHA_PARTICLE_MASS= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT") :: &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT") :: &
U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_MASS_IN_U") :: &
ALPHA_PARTICLE_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_MASS_IN_U") :: &
U_ALPHA_PARTICLE_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_MOLAR_MASS") :: &
ALPHA_PARTICLE_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_MOLAR_MASS") :: &
U_ALPHA_PARTICLE_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_PROTON_MASS_RATIO") :: &
ALPHA_PARTICLE_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_PROTON_MASS_RATIO") :: &
U_ALPHA_PARTICLE_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS") :: &
ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS") :: &
U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="ANGSTROM_STAR") :: &
ANGSTROM_STAR= !! 
real(c_double), protected, bind(C,name="U_ANGSTROM_STAR") :: &
U_ANGSTROM_STAR= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_CONSTANT") :: &
ATOMIC_MASS_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_CONSTANT") :: &
U_ATOMIC_MASS_CONSTANT= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT") :: &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT") :: &
U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV") :: &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV") :: &
U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP") :: &
ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP") :: &
U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY") :: &
ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY") :: &
U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY") :: &
ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY") :: &
U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ACTION") :: &
ATOMIC_UNIT_OF_ACTION= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ACTION") :: &
U_ATOMIC_UNIT_OF_ACTION= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_CHARGE") :: &
ATOMIC_UNIT_OF_CHARGE= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE") :: &
U_ATOMIC_UNIT_OF_CHARGE= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_CHARGE_DENSITY") :: &
ATOMIC_UNIT_OF_CHARGE_DENSITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE_DENSITY") :: &
U_ATOMIC_UNIT_OF_CHARGE_DENSITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_CURRENT") :: &
ATOMIC_UNIT_OF_CURRENT= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_CURRENT") :: &
U_ATOMIC_UNIT_OF_CURRENT= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM") :: &
ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD") :: &
ATOMIC_UNIT_OF_ELECTRIC_FIELD= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_FIELD= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT") :: &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY") :: &
ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL") :: &
ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM") :: &
ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM") :: &
U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_ENERGY") :: &
ATOMIC_UNIT_OF_ENERGY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_ENERGY") :: &
U_ATOMIC_UNIT_OF_ENERGY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_FORCE") :: &
ATOMIC_UNIT_OF_FORCE= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_FORCE") :: &
U_ATOMIC_UNIT_OF_FORCE= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_LENGTH") :: &
ATOMIC_UNIT_OF_LENGTH= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_LENGTH") :: &
U_ATOMIC_UNIT_OF_LENGTH= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_MAG__DIPOLE_MOM") :: &
ATOMIC_UNIT_OF_MAG__DIPOLE_MOM= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM") :: &
U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_MAG__FLUX_DENSITY") :: &
ATOMIC_UNIT_OF_MAG__FLUX_DENSITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY") :: &
U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_MAGNETIZABILITY") :: &
ATOMIC_UNIT_OF_MAGNETIZABILITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_MAGNETIZABILITY") :: &
U_ATOMIC_UNIT_OF_MAGNETIZABILITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_MASS") :: &
ATOMIC_UNIT_OF_MASS= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_MASS") :: &
U_ATOMIC_UNIT_OF_MASS= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_MOMENTUM") :: &
ATOMIC_UNIT_OF_MOMENTUM= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_MOMENTUM") :: &
U_ATOMIC_UNIT_OF_MOMENTUM= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_PERMITTIVITY") :: &
ATOMIC_UNIT_OF_PERMITTIVITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_PERMITTIVITY") :: &
U_ATOMIC_UNIT_OF_PERMITTIVITY= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_TIME") :: &
ATOMIC_UNIT_OF_TIME= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_TIME") :: &
U_ATOMIC_UNIT_OF_TIME= !! 

real(c_double), protected, bind(C,name="ATOMIC_UNIT_OF_VELOCITY") :: &
ATOMIC_UNIT_OF_VELOCITY= !! 
real(c_double), protected, bind(C,name="U_ATOMIC_UNIT_OF_VELOCITY") :: &
U_ATOMIC_UNIT_OF_VELOCITY= !! 

real(c_double), protected, bind(C,name="AVOGADRO_CONSTANT") :: &
AVOGADRO_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_AVOGADRO_CONSTANT") :: &
U_AVOGADRO_CONSTANT= !! 

real(c_double), protected, bind(C,name="BOHR_MAGNETON") :: &
BOHR_MAGNETON= !! 
real(c_double), protected, bind(C,name="U_BOHR_MAGNETON") :: &
U_BOHR_MAGNETON= !! 

real(c_double), protected, bind(C,name="BOHR_MAGNETON_IN_EV_T") :: &
BOHR_MAGNETON_IN_EV_T= !! 
real(c_double), protected, bind(C,name="U_BOHR_MAGNETON_IN_EV_T") :: &
U_BOHR_MAGNETON_IN_EV_T= !! 

real(c_double), protected, bind(C,name="BOHR_MAGNETON_IN_HZ_T") :: &
BOHR_MAGNETON_IN_HZ_T= !! 
real(c_double), protected, bind(C,name="U_BOHR_MAGNETON_IN_HZ_T") :: &
U_BOHR_MAGNETON_IN_HZ_T= !! 

real(c_double), protected, bind(C,name="BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA") :: &
BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA= !! 
real(c_double), protected, bind(C,name="U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA") :: &
U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA= !! 

real(c_double), protected, bind(C,name="BOHR_MAGNETON_IN_K_T") :: &
BOHR_MAGNETON_IN_K_T= !! 
real(c_double), protected, bind(C,name="U_BOHR_MAGNETON_IN_K_T") :: &
U_BOHR_MAGNETON_IN_K_T= !! 

real(c_double), protected, bind(C,name="BOHR_RADIUS") :: &
BOHR_RADIUS= !! 
real(c_double), protected, bind(C,name="U_BOHR_RADIUS") :: &
U_BOHR_RADIUS= !! 

real(c_double), protected, bind(C,name="BOLTZMANN_CONSTANT") :: &
BOLTZMANN_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_BOLTZMANN_CONSTANT") :: &
U_BOLTZMANN_CONSTANT= !! 

real(c_double), protected, bind(C,name="BOLTZMANN_CONSTANT_IN_EV_K") :: &
BOLTZMANN_CONSTANT_IN_EV_K= !! 
real(c_double), protected, bind(C,name="U_BOLTZMANN_CONSTANT_IN_EV_K") :: &
U_BOLTZMANN_CONSTANT_IN_EV_K= !! 

real(c_double), protected, bind(C,name="BOLTZMANN_CONSTANT_IN_HZ_K") :: &
BOLTZMANN_CONSTANT_IN_HZ_K= !! 
real(c_double), protected, bind(C,name="U_BOLTZMANN_CONSTANT_IN_HZ_K") :: &
U_BOLTZMANN_CONSTANT_IN_HZ_K= !! 
